[package]
name = "rust-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.34.0", features = ["full"] }
